Migrate: openjdk 25 & lombok removal